--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-set(ping_SOURCES ball.c event_handler.c game.c main.c player.c)
+set(pong_SOURCES ball.c event_handler.c game.c main.c player.c)
 
-add_executable(ping ${ping_SOURCES})
+add_executable(pong ${pong_SOURCES})
 
-target_link_libraries(ping ${SDL_LIBRARY} ${SDLTTF_LIBRARY})
+target_link_libraries(pong ${SDL_LIBRARY} ${SDLTTF_LIBRARY})
